--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "handler.js",
   "scripts": {
-    "start": "nodemon ./src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint ./"
+    "start:prod": "NODE_ENV=production node ./src/server.js",
+    "start:dev": "nodemon ./src/server.js",
+    "lint": "eslint ./",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
