--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^8.57.0",
+    "eslint": "^8.52.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.29.1",
-    "nodemon": "^3.1.1"
+    "eslint-plugin-import": "^2.29.0",
+    "nodemon": "^3.0.1"
   },
   "dependencies": {
-    "@hapi/hapi": "^21.3.9",
-    "nanoid": "^3.3.7"
+    "@hapi/hapi": "^21.3.2",
+    "joi": "^17.13.3",
+    "nanoid": "^3.1.20"
   }
 }
