--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start:prod": "NODE_ENV=production node ./src/server.js",
     "start:dev": "nodemon ./src/server.js",
     "lint": "eslint ./",
+    "migrate": "node-pg-migrate",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -20,7 +21,10 @@
   },
   "dependencies": {
     "@hapi/hapi": "^21.3.2",
+    "dotenv": "^16.4.5",
     "joi": "^17.13.3",
-    "nanoid": "^3.1.20"
+    "nanoid": "^3.1.20",
+    "node-pg-migrate": "^7.6.1",
+    "pg": "^8.12.0"
   }
 }
